--- a/CSS/style.css
+++ b/CSS/style.css
@@ -23,6 +23,9 @@ h1,h2,p,a{
 	flex-wrap: wrap;
 	justify-content: center;
 }
+.serviceprint:hover {
+	color: black;
+}
 /* Scroll bar --------------------------------------------------<*/
 ::-webkit-scrollbar {
   width: 10px;
@@ -362,6 +365,10 @@ padding: 10px;
 .news {
 	padding: 10px;
 	padding-bottom: 300px;
+	width: 100%;
+	justify-content: left;
+	align-items: left;
+	text-align: left;
 }
 .admin-home a {
  text-decoration: none;
@@ -1120,6 +1127,78 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 	padding-right: 10px;
 	color:black;
 }
+.boxbut {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+}
+.Services2 .servicescontent2 {
+	display: flex;
+	flex-wrap:wrap;
+	margin-left:auto;
+	margin-right:auto;
+	margin-top: 10px;
+	padding:10px;
+	height:80%;
+	max-width:100%;
+	justify-content: left;
+	align-items: left;
+}
+.Services2 .servicescontent2 .servicesBox {
+	width:200px;
+	height:100px;
+	text-align: center;
+	margin-bottom: 30px;
+	margin-left:auto;
+	margin-right:auto;
+	background-image: linear-gradient(0deg, #C7DAD4, white);
+	border-radius: 12px;
+	color:white;
+	border: 2px solid black;
+	box-shadow: 0 10px 10px black;
+}
+.Services2 .servicescontent2 .announceBox {
+	width:230px;
+	height:300px;
+	text-align: center;
+	margin-bottom: 30px;
+	margin-left:13px;
+	margin-right:13px;
+	background-color: whitesmoke;
+	border-radius: 12px;
+	color:white;
+	border: 2px solid black;
+	box-shadow: 0 10px 10px black;
+	text-overflow: ellipsis;
+}
+.boximg2 {
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	color:#F1F1EF;
+	font-weight: bold;
+}
+.boximg2 img {
+	border-top-right-radius: 10px;
+	border-top-left-radius: 10px;
+}
+.evedesc2 {
+	height:80px;
+	overflow-y: hidden;
+	word-wrap: break-word;
+	padding-left: 5px;
+	padding-right: 5px;
+	color:black;
+}
+.boxbut2 {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+}
+
 .boxtitle {
 	border-top-left-radius: 10px;
 	border-top-right-radius: 10px;
@@ -1149,12 +1228,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 	border: 2px solid black;
 	box-shadow: 0 10px 5px black;
 }
-.boxbut {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	text-align: center;
-}
+
 .btnservice {
 	text-align: center;
   color: black;
@@ -1169,7 +1243,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
   transition: all 0.2s ease;
 }
 .btnservice:hover {
-	padding: 10px 29px;
+	padding: 10px 20px;
 	background-color: #3894A3;
 	box-shadow:0 0 6px black;
 	color: white;
@@ -1403,7 +1477,6 @@ outline: none;
 	 padding-bottom: 120px;
 	}
 .docbod {
-	  display: grid;
 	 position: relative;
 	 align-items: center;
 	 justify-content: center;
@@ -1678,6 +1751,20 @@ width: 100%;
   text-decoration: none;
   cursor: pointer;
 }
+
+.errr {
+	background-color: lightgray;
+	text-align: center;
+	margin-bottom: 140px;
+	margin-top: 40px;
+	padding: 10px;
+}
+.errr h1 {
+	font-size: 50px;
+}
+.errr h3 {
+	font-size: 30px;
+}
 /* Modal -------------------------------------------------------->*/
 @media screen and (max-width: 1300px) {
  .logoo2 {
@@ -1707,6 +1794,11 @@ width: 100%;
 	 
 }
 @media screen and (max-width: 950px) {
+	.container {
+		width: ;
+	}
+}
+@media screen and (max-width: 950px) {
 .homepice {
       display: none;
    }
@@ -1727,6 +1819,15 @@ width: 100%;
    .inputsr {
    	display: block;
    }
+}
+@media screen and (max-width: 780px) {
+	.docbod {
+		overflow-x: auto;
+	}
+	.docttle {
+		font-size: 30px;
+		min-width: 100%;
+	}
 }
 @media screen and (max-width: 600px) {
     .Home .homecontent p { 
@@ -1790,6 +1891,13 @@ width: 100%;
     }
 }
 @media screen and (max-width: 375px) {
+	.docbod {
+		overflow-x: auto;
+	}
+	.docttle {
+		font-size: 30px;
+		min-width: 100%;
+	}
     .yellow a {
         font-size:13px;
     }
